--- a/backend/Recommendation System/ltk.ipynb
+++ b/backend/Recommendation System/ltk.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,16 +410,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scipy.sparse.save_npz(\"sparse_matrix.npz\", matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<enumerate at 0x212ab642660>"
+       "<enumerate at 0x7fd46b551120>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,9 +481,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recommendation(job_description_input): #recommendation based on job description\n",
-    "    tfidf = TfidfVectorizer(stop_words='english')\n",
-    "    tfidf_matrix = tfidf.fit_transform(df['Job Description'])  \n",
+    "def recommendation(job_description_input):\n",
+    "    tfidf=joblib.load(\"tfidf_vectorizer.pkl\")\n",
+    "    tfidf_matrix = scipy.sparse.load_npz(\"sparse_matrix.npz\")\n",
     "    job_desc_vec = tfidf.transform([job_description_input])  \n",
     "    cosine_sim = cosine_similarity(job_desc_vec, tfidf_matrix).flatten()\n",
     "    distances = sorted(list(enumerate(cosine_sim)), key=lambda x: x[1], reverse=True)[1:6] \n",
@@ -479,12 +497,48 @@
     "        jobs.append((job_title, job_description, similarity_score))  \n",
     "    \n",
     "    \n",
-    "    print(f\"Recommendations based on your job description:\")\n",
-    "    for job in jobs:\n",
-    "        print(f\"Job Title: {job[0]}\")\n",
-    "        print(f\"Job Description: {job[1]}\")\n",
-    "        print(f\"Similarity: {job[2]:.2f}\")\n",
-    "        print(\"-\" * 50)"
+    "    return jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: joblib in /home/shlok/code/ResuMaster/.venv/lib/python3.12/site-packages (1.4.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tfidf_vectorizer.pkl']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Save the fitted TF-IDF vectorizer\n",
+    "joblib.dump(tfidf, \"tfidf_vectorizer.pkl\")\n"
    ]
   },
   {
@@ -520,144 +574,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recommendations based on your job description:\n",
-      "Job Title: Flutter Developer\n",
-      "Job Description: We are looking for hire experts flutter developer. So you are eligible this post then apply your resume.\n",
-      "Job Types: Full-time, Part-time\n",
-      "Salary: ₹20,000.00 - ₹40,000.00 per month\n",
-      "Benefits:\n",
-      "Flexible schedule\n",
-      "Food allowance\n",
-      "Schedule:\n",
-      "Day shift\n",
-      "Supplemental Pay:\n",
-      "Joining bonus\n",
-      "Overtime pay\n",
-      "Experience:\n",
-      "total work: 1 year (Preferred)\n",
-      "Housing rent subsidy:\n",
-      "Yes\n",
-      "Industry:\n",
-      "Software Development\n",
-      "Work Remotely:\n",
-      "Temporarily due to COVID-19\n",
-      "Similarity: 0.30\n",
-      "--------------------------------------------------\n",
-      "Job Title: Flutter Developer\n",
-      "Job Description: We are looking for self-motivated Flutter Developer with excellent communication and customer service skills to join a fast-growing startup DcodeAI. Our ideal candidate is a great Flutter Developer who is proficient with Flutter and its ecosystem. Your primary focus will be developing full user-facing applications, along with individual user interface components. These will be implemented following well-established best practices in Android/Flutter. You will ensure that these components and the overall application are robust and easy to maintain, coordinating with the rest of the team. Therefore, a commitment to collaborative problem solving, sophisticated design, and product quality are important.\n",
-      "Minimum 1-2 years of experience in software development\n",
-      "Hands-On Programming Experience in Flutter\n",
-      "Exposure to Mobile developer domain and SQL lite\n",
-      "Job Skills:\n",
-      "Experience building and deploying a moderately complex Flutter/Android/IOS app,\n",
-      "Translating UI/UX designs into code,\n",
-      "Firebase and GCM\n",
-      "Advanced debugging/testing/optimization,\n",
-      "General knowledge of Location Services, Maps, and other common Android/IOS libraries\n",
-      "Job Types: Full-time, Regular / Permanent\n",
-      "Salary: ₹60,000.00 - ₹90,000.00 per month\n",
-      "Schedule:\n",
-      "Day shift\n",
-      "COVID-19 considerations:\n",
-      "All customers and employees are required to wear a mask while at office premises. There are mandatory temperature checks at the entrance and surfaces are regularly sanitized.\n",
-      "Education:\n",
-      "Bachelor's (Preferred)\n",
-      "Experience:\n",
-      "Flutter Development: 2 years (Preferred)\n",
-      "Industry:\n",
-      "Education & Instruction\n",
-      "Work Remotely:\n",
-      "No\n",
-      "Similarity: 0.27\n",
-      "--------------------------------------------------\n",
-      "Job Title: Flutter Developer\n",
-      "Job Description: Flutter developer\n",
-      "Experience: 1+ years\n",
-      "About You:\n",
-      "As a Flutter Developer, you will create multi-platform apps for iOS and Android using Google's Flutter development framework. The primary focus will be on creating new experiences.\n",
-      "You will additionally work on innovative new app projects. Deep experience contributing to and managing high-scale production mobile apps.\n",
-      "Essential Skills:\n",
-      "Experience building and deploying a moderately complex Flutter app\n",
-      "Translating UI/UX designs into code\n",
-      "Firebase\n",
-      "Advanced debugging/testing/optimisation Knowledge of Location Services, Maps, and other common Android/IOS libraries\n",
-      "Similarity: 0.26\n",
-      "--------------------------------------------------\n",
-      "Job Title: Flutter Developer\n",
-      "Job Description: Flutter Developer\n",
-      "\n",
-      "We are looking for innovative and engaged Flutter Developer who is motivated, creative and team player.\n",
-      "Must have work experience with Flutter SDK and Dart programming language.\n",
-      "Strong knowledge on Flutter widgets like Cupertino for iOS and Material Components for Android.\n",
-      "Knowledge on building flutter module and flutter plug-ins.\n",
-      "Experience working on mobile platform like Android/iOS is required.\n",
-      "Good knowledge in OOPS concepts and JAVA.\n",
-      "Experienced in building mobile applications that utilizes web services (SOAP / REST / JSON / GSON)\n",
-      "Experience with third-party libraries and APIs.\n",
-      "Good knowledge of database (MySQL, SQLlite, RealM).\n",
-      "Knowledge on app publish to play store and App store\n",
-      "Experience: 1 yr+\n",
-      "\n",
-      "Qualification: B tech/M Tech/MCA, BSc in Computer Science, or a related field\n",
-      "\n",
-      "Immediate Joiners Preferred\n",
-      "\n",
-      "Job Type: Full-time\n",
-      "\n",
-      "Salary: ₹15,448.00 - ₹63,654.00 per month\n",
-      "\n",
-      "Experience:\n",
-      "software development: 1 year (Preferred)\n",
-      "work: 1 year (Preferred)\n",
-      "total work: 1 year (Preferred)\n",
-      "Education:\n",
-      "Bachelor's (Preferred)\n",
-      "Work Remotely:\n",
-      "Temporarily due to COVID-19\n",
-      "Similarity: 0.26\n",
-      "--------------------------------------------------\n",
-      "Job Title: Flutter Developer\n",
-      "Job Description: Job Summary:\n",
-      "\n",
-      "As a Flutter Developer, you will create multi-platform apps for iOS and Android using Google’s Flutter development framework. The primary focus will be on creating new experiences. You will additionally work on innovative new app projects.\n",
-      "\n",
-      "Deep experience contributing to and managing high-scale production mobile apps. You must have a minimum of 2 years of previous experience in Flutter development.\n",
-      "\n",
-      "Responsibilities and Duties:\n",
-      "\n",
-      "Experience building and deploying a moderately complex Flutter app\n",
-      "\n",
-      "Translating UI/UX designs into code\n",
-      "\n",
-      "Firebase\n",
-      "\n",
-      "Advanced debugging/testing/optimisation\n",
-      "\n",
-      "Job Type: Full-time\n",
-      "\n",
-      "Experience:\n",
-      "\n",
-      "Flutter: 1 years (Preferred)\n",
-      "\n",
-      "software development: 2 years (Preferred)\n",
-      "\n",
-      "total work: 2 years (Preferred)\n",
-      "\n",
-      "Education:\n",
-      "\n",
-      "Bachelor’s (Preferred)\n",
-      "\n",
-      "WHATSAPP YOUR RESUME ON 72-529-832-67 HR TEAM\n",
-      "Similarity: 0.25\n",
-      "--------------------------------------------------\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[('Flutter Developer',\n",
+       "  'Urgent Opening for Flutter Developer to develop mobile apps development\\n\\nStrong knowledge in Flutter, Hybrid, React Native, Google Map\\n\\nRoles & Responsibility: -\\n\\n\\\\* Developing mobile applications in Flutter\\n\\n\\\\* Create multi platform apps for iOS/ Android using\\n\\n\\\\* Flutter development framework\\n\\n\\\\* Flutter SDK and Dart programming language\\n\\nSkills Required: -\\n\\nFlutter, Dart, Firebase, iOS & Android development, Hybrid, Restful APIs, Flutter UI, Google Cloud\\n\\nReact Native, Google Maps\\n\\nExperience: - Must have 2 years experience\\n\\nPreference to immediate joiners\\n\\nJob Types: Full-time, work from home\\n\\nJob Type: Full-time\\n\\nSalary: ₹200,000.00 - ₹400,000.00 per year\\n\\nSchedule:\\nDay shift\\nWork Remotely:\\nTemporarily due to COVID-19',\n",
+       "  np.float64(0.30984354557400584)),\n",
+       " ('Flutter Developer',\n",
+       "  \"We are looking for self-motivated Flutter Developer with excellent communication and customer service skills to join a fast-growing startup DcodeAI. Our ideal candidate is a great Flutter Developer who is proficient with Flutter and its ecosystem. Your primary focus will be developing full user-facing applications, along with individual user interface components. These will be implemented following well-established best practices in Android/Flutter. You will ensure that these components and the overall application are robust and easy to maintain, coordinating with the rest of the team. Therefore, a commitment to collaborative problem solving, sophisticated design, and product quality are important.\\nMinimum 1-2 years of experience in software development\\nHands-On Programming Experience in Flutter\\nExposure to Mobile developer domain and SQL lite\\nJob Skills:\\nExperience building and deploying a moderately complex Flutter/Android/IOS app,\\nTranslating UI/UX designs into code,\\nFirebase and GCM\\nAdvanced debugging/testing/optimization,\\nGeneral knowledge of Location Services, Maps, and other common Android/IOS libraries\\nJob Types: Full-time, Regular / Permanent\\nSalary: ₹60,000.00 - ₹90,000.00 per month\\nSchedule:\\nDay shift\\nCOVID-19 considerations:\\nAll customers and employees are required to wear a mask while at office premises. There are mandatory temperature checks at the entrance and surfaces are regularly sanitized.\\nEducation:\\nBachelor's (Preferred)\\nExperience:\\nFlutter Development: 2 years (Preferred)\\nIndustry:\\nEducation & Instruction\\nWork Remotely:\\nNo\",\n",
+       "  np.float64(0.29123015150075243)),\n",
+       " ('Flutter Developer',\n",
+       "  \"We are an established IT company based in Dubai-UAE currently expanding our development team in India.\\n\\n*The Position*:\\n\\nWe are looking for Flutter Developer.\\n\\n*Minimum Requirements: *\\n\\n· Bachelor's degree in computer science.\\n\\n· 2-6 years of solid Programming Experience.\\n\\n· Minimum 1 year of experience in Flutter.\\n\\n*Skills Required: *\\n\\n· App design implementation in Dart.\\n\\n· Working on bug fixing and improving application performance.\\n\\n· Choose the best flutter architecture suited for the project.\\n\\n· Ability to integrate REST API's efficiently.\\n\\n· Good experience in either Android or iOS publishing.\\n\\n· Good experience in integrating plugins & SDK's.\\n\\n*The Location: * Koratty info park, Thrissur, Kerala\\n\\nJob Types: Full-time, Contract\\n\\nExperience:\\n* flutter: 1 year (Required)\\n\\nEducation:\\n* Bachelor's (Preferred)\",\n",
+       "  np.float64(0.2889254871321558)),\n",
+       " ('Flutter Developer',\n",
+       "  \"We are looking for Flutter expert who will take our ideas to life in the interesting journey of our organization. You should have attitude to learn to find the solutions - we will provide you with all the required tools.\\n\\nYou will be responsible for designing, developing, testing, and debugging responsive mobile application using Flutter framework.\\n\\nQualifications Required -\\n• Bachelor's degree or equivalent in Computers\\n• Experience - 1-2 Years\\n\\nPersonal Qualities:\\nExcellent communication skills both written and verbal\\nSelf-motivated with strong team spirit\\nStrong work ethic\\nAbility to work independently and as ability to work within a team\\nExcellent multi-tasking skills\\nAbility to work in Startup environment\\nSkillsets:\\nExperience in DART, Flutter framework\\nGood knowledge of Flutter architecture and BLOC Pattern\\nExperience with AWS authentication service\\nMobile app deployment on Play store and App Store\\nJob Type: Full-time\\n\\nSalary: From ₹15,000.00 per month\\n\\nExperience:\\nFlutter: 1 year (Preferred)\\nEducation:\\nBachelor's (Required)\",\n",
+       "  np.float64(0.28203476860531246)),\n",
+       " ('Flutter Developer',\n",
+       "  '1+ Years of Experience in Flutter App Development\\nGood to have iOS and Android experience\\nJob Type: Full-time\\nSalary: ₹15,000.00 - ₹30,000.00 per month\\nSchedule:\\nDay shift\\nExperience:\\nflutter: 1 year (Required)\\ntotal work: 1 year (Required)\\nWork Remotely:\\nNo',\n",
+       "  np.float64(0.27898960528590544))]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -667,7 +609,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -681,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
